--- a/MCA/probatch1/app1/templates/home.html
+++ b/MCA/probatch1/app1/templates/home.html
@@ -7,6 +7,7 @@
 <body>
 <marquee> You are learning templates</marquee>
 <img src="{% static 'img/image2.jpg' %}">
+<p>Image inserted!!!!</p>
 
 </body>
 </html>
