--- a/MCA/probatch1/app1/templates/home.html
+++ b/MCA/probatch1/app1/templates/home.html
@@ -5,9 +5,12 @@
         <link rel="stylesheet" href="{% static 'css/myfirst.css'%}">
     </head>
 <body>
+    <a href="{% url 'displaygreen' %}">green</a>
 <marquee> You are learning templates</marquee>
+
+
 <img src="{% static 'img/image2.jpg' %}">
-<p>Image inserted!!!!</p>
+
 
 </body>
 </html>
